--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -6,7 +6,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     border: 2px solid black;
-    height: 400px;
+    height: 100%;
 }
 
 .main h1 {
@@ -74,6 +74,7 @@ body {
     width: 90%;
     border: 2px solid black;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 .contact-info {
