--- a/View/index.html
+++ b/View/index.html
@@ -7,15 +7,37 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    <div class="main" id="app">
+    <!--<div class="main" id="app">
         <div class="header">
             <h1>Contact List</h1>
             <div class="addSaveBtns" id="addSaveBtns">
                 <div class="add" id="addBtn" v-bind:title="titleAdd">
-                    <a href="#">{{messageAdd}}</a>
+                    <a @click="formOn()" href="#">{{messageAdd}}</a>
                 </div>
             </div>
         </div>
+        <template v-if="status == 1">
+            <div class="edit-contact">
+                <label for="submit">
+                    <button class="save" @click="formOff()">
+                        Save
+                    </button>
+                </label>
+                <div class="contact-img">
+                    img
+                    <img src="#" alt="">
+                </div>
+                <div class="contact-form">
+                    <form action="../index.php">
+                        <h3>Contact name:</h3>
+                        <input type="text">
+                        <h3>Phone:</h3>
+                        <input type="text">
+                    </form>
+                    <input  type="submit" id="submit">
+                </div>
+            </div>
+        </template>
         <template v-if="status == 0">
             <div class="contact">
                 <div class="contact-img">
@@ -34,20 +56,19 @@
                 </button>
             </div>
         </template>
-        <template v-else>
+        <template v-elseif="status == 1">
             <div class="edit-contact">
                 <label for="submit">
                     <button class="save" @click="formOff()">
                         Save
                     </button>
                 </label>
-
                 <div class="contact-img">
                     img
                     <img src="#" alt="">
                 </div>
                 <div class="contact-form">
-                    <form action="dasdas.php">
+                    <form action="../index.php">
                         <h3>Contact name:</h3>
                         <input type="text">
                         <h3>Phone:</h3>
@@ -55,11 +76,28 @@
                     </form>
                     <input  type="submit" id="submit">
                 </div>
+            </div>
         </template>
-
-        </div>
-    </div>
-    <script type="text/javascript">
+        <template v-if="status == 0">
+            <div class="contact">
+                <div class="contact-img">
+                    img
+                    <img src="#" alt="">
+                </div>
+                <div class="contact-info">
+                    <h3>Contact name</h3>
+                    <h3>+380000000000</h3>
+                </div>
+                <div class="delete">
+                    <a href="#">Delete</a>
+                </div>
+                <button @click="formOn()" class="edit">
+                    Edit
+                </button>
+            </div>
+        </template>
+    </div>-->
+<!--    <script type="text/javascript">
         var app = new Vue({
             el: '#app',
             data: {
@@ -78,6 +116,6 @@
                 }
             }
         })
-    </script>
+    </script>-->
 </body>
 </html>
