--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,8 @@ body {
 .add,
 .delete,
 .edit,
-.save{
+.save,
+input[type="submit"]{
     width: 90px;
     text-align: center;
     border-radius: 5px;
@@ -89,8 +90,4 @@ body {
     height: 100%;
     min-height: 80px;
     max-height: 120px;
-}
-
-.contact-form input[type="submit"] {
-    display: none;
 }
